--- a/environments/int/config.yaml
+++ b/environments/int/config.yaml
@@ -1,8 +1,8 @@
 firstObj: |
-  myprop: myprop1
-  myprop1: myprop12
+  sytprop: myprop1
+  sytprop1: myprop12
 
 secondObj: |
-  secondprop: secondprop23
-  secondprop1: secondprop34
+  sytsecondprop: secondprop23
+  sytsecondprop1: secondprop34
 
