--- a/environments/int/config.yaml
+++ b/environments/int/config.yaml
@@ -1,8 +1,8 @@
-firstObj: |-
+firstObj: |
   sytprop: myprop1
   sytprop1: myprop12
 
-secondObj: |-
+secondObj: |
   sytsecondprop: secondprop23
   sytsecondprop1: secondprop34
 
