--- a/environments/int/config.yaml
+++ b/environments/int/config.yaml
@@ -7,7 +7,8 @@ firstObj: |-
   sytprop: myprop1
   sytprop1: myprop12
 
-secondObj: |
-  sytprop: myprop1
-  sytprop1: myprop12
+helmValues: |
+  secondObj: 
+    sytprop: myprop1
+    sytprop1: myprop12
 
