--- a/environments/int/config.yaml
+++ b/environments/int/config.yaml
@@ -13,6 +13,10 @@ helmValues: |
     sytprop1: myprop12
 
 helmRoot:
+  firstObj: |
+    sytprop: myprop1
+    sytprop1: myprop12
+
   secondObj: |
     sytprop: myprop1
     sytprop1: myprop12
