--- a/environments/int/config.yaml
+++ b/environments/int/config.yaml
@@ -3,6 +3,13 @@ appSet:
   image: image-int
   imageTag: image-tag
 
+secondObj:
+  intprop: myprop1
+  intprop1: myprop12
+firstObj:
+  intprop: myprop1
+  intprop1: myprop12
+
 helmRoot: |
   secondObj: 
     intprop: myprop1
