--- a/environments/syt/config.yaml
+++ b/environments/syt/config.yaml
@@ -1,14 +1,14 @@
 unique: something
 
 appSet:
-  name: app-set-int
-  image: image-int
+  name: app-set-syt
+  image: image-syt
   imageTag: image-tag
 
 helmRoot: |
   secondObj: 
-    intprop: myprop1
-    intprop1: myprop12
+    sytprop: myprop1
+    sytprop1: myprop12
   firstObj: 
-    intprop: myprop1
-    intprop1: myprop12
+    sytprop: myprop1
+    sytprop1: myprop12
